create github pages

--- a/page3.html
+++ b/page3.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site creator</a></section><section class="footer4 cid-s9Jb0FUqaO" once="footers" id="footer4-1z">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="footer4 cid-s9Jb0FUqaO" once="footers" id="footer4-1z">
 
     
     
